About page edit

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
   <div class="about-text">
       <p>I was born and raised in El Paso, TX. I moved around a lot in my early twenties, and eventually ended up in NYC!  </p>
       <p>My career for the past seven years has been in opticianry, and I have been the Optician Manager of several different stores and teams.</p>
-      <p>Despite opticianry being a career that is ever evolving and changing, I still wasn't feeling challenged enough, which is why I decided to pursue the study of Web Development.</p>
+      <p>Despite opticianry being a career that is ever evolving and changing, I wasn't feeling challenged enough, which is why I decided to pursue the study of Web Development.</p>
       <p> I am hoping to take my team building, management, and technical skills, and break into the Tech industry within the next year. </p>
       <p>  Please take a look at my CV, downloadable at the link below.</p>
     </div>
