Work grid info update

--- a/work.html
+++ b/work.html
@@ -36,31 +36,31 @@
   <div class="grid">
   <!--Grid items here -->
   <div class="grid__item">
-    <h2>Web App</h2>
+    <h2>Future Project</h2>
     <p>
-      Words words words words words words words words words
+      This project doesn't exist yet! Once it does, you will find a description and link here.
     </p>
     <a href="#">See this project on GitHub</a>
   </div>
   <div class="grid__item">
-    <h2>Storefront</h2>
-    <p>Words words words words words words words words words words words
+    <h2>Future</h2>
+    <p>This project doesn't exist yet! Once it does, you will find a description and link here.
     </p>
     <a href="#">See this project on Github</a>
     </div>
     <div class="grid__item">
-      <h2>HTML Project</h2>
-      <p>Words words words words words words words words words words words</p>
+      <h2>Future Project</h2>
+      <p>This project doesn't exist yet! Once it does, you will find a description and link here.</p>
       <a href="#">See this project on Github</a>
       </div>
       <div class="grid__item">
-        <h2>HTML Project</h2>
-        <p>Words words words words words words words words words words words</p>
+        <h2>Future Project</h2>
+        <p>This project doesn't exist yet! Once it does, you will find a description and link here.</p>
         <a href="#">See this project on Github</a>
         </div>
         <div class="grid__item">
-          <h2>HTML Project</h2>
-          <p>Words words words words words words words words words words words</p>
+          <h2>Future Project</h2>
+          <p>This project doesn't exist yet! Once it does, you will find a description and link here.</p>
           <a href="#">See this project on Github</a>
           </div>
   </div>
