--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
     <a href="#">See this project on GitHub</a>
   </div>
   <div class="grid__item">
-    <h2>Future</h2>
+    <h2>Future Project</h2>
     <p>This project doesn't exist yet! Once it does, you will find a description and link here.
     </p>
     <a href="#">See this project on Github</a>
