--- a/work.html
+++ b/work.html
@@ -4,7 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
-  <title>My Portfolio</title>
+  <title>View My Projects</title>
   <link rel="icon" href="favicon/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
