--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <img src="img/usethisone.png" class="profile_portrait" alt="Color photo portrait of Madison Taff">
     <h1>Hello World!</h1>
       <p>My name is Madison Taff. I am an aspiring <span>web</span> developer in NYC.</p>
-      <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Check out some of my code.</a>
+      <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">View my Linkedin, or</a>
     </div>
     <footer class="page-footer">
       <p>Find me on</p> <!-- outisde website logos -->
