Twitter link added

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <a href="tel:9153198257" for="my-phone-number">(915)319-8257</a><br>
     Email me
     <a href="mailto:mdsnraetff@gmail.com" for="my personal email">here.</a><br>
-    <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Check out some of my code.</a>
+    <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">My Linkedin</a>
   </div>
 
     <form action="" method="post" id="contact-form" class="form-one">
@@ -60,7 +60,7 @@
   <footer class="page-footer">
     <p>Find me on</p> <!-- outisde website logos -->
     <div class="social-media">
-    <img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle">
+    <a href="https://twitter.com/mdsnraetff"><img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle"></a>
     <img src="img/github.svg" alt="Github logo, black circle with a cat in the middle">
     <img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle">
     </div>
