--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   </header>
     <div class="profile"> <!-- Portrait goes here -->
       <img src="img/usethisone.png" class="profile_portrait" alt="Color photo portrait of Madison Taff">
-    <h1>Hello World!</h1>
+    <h1>Welcome!</h1>
       <p>My name is Madison Taff. I am an aspiring <span>web</span> developer in NYC.</p>
-      <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Check out some of my code.</a>
+    <p>Click through this website to learn more about me, and view some of my projects.</p>
     </div>
     <footer class="page-footer">
       <p>Find me on</p> <!-- outisde website logos -->
