--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
     <div class="social-media">
     <a href="https://twitter.com/mdsnraetff"><img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle"></a>
     <a href="https://github.com/mdsnraetff"><img src="img/github.svg" alt="Github logo, black circle with a cat in the middle"></a>
-    <a href="https://www.instagram.com/madisontaff/?hl=en"<img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
+    <a href="https://www.instagram.com/madisontaff/?hl=en"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
     </div>
   </footer>
 </html>
