--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,13 @@
            <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
           </li>
           <li role="presentation">
-           <a href="about.html" role="menuitem" class="navigation-list__item" target="_blank">About Me</a>
+           <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
           </li>
           <li role="presentation">
-           <a href="contact.html" role="menuitem" class="navigation-list__item" target="_blank">Contact</a>
+           <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
           </li>
           <li role="presentation">
-            <a href="work.html" role="menuitem" class="navigation-list__item" target="_blank">Work</a>
+            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
           </li>
     </ul>
     </nav>
@@ -40,7 +40,7 @@
     <a href="tel:9153198257" for="my-phone-number">(915)319-8257</a><br>
     Email me
     <a href="mailto:mdsnraetff@gmail.com" for="my personal email">here.</a><br>
-    <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">My Linkedin</a>
+    <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Message me on Linkedin</a>
   </div>
 
     <form action="" method="post" id="contact-form" class="form-one">
@@ -60,9 +60,9 @@
   <footer class="page-footer">
     <p>Find me on</p> <!-- outisde website logos -->
     <div class="social-media">
-    <a href="https://twitter.com/mdsnraetff"><img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle"></a>
-    <a href="https://github.com/mdsnraetff"><img src="img/github.svg" alt="Github logo, black circle with a cat in the middle"></a>
-    <a href="https://www.instagram.com/madisontaff/?hl=en"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
+    <a href="https://twitter.com/mdsnraetff" target="_blank"><img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle"></a>
+    <a href="https://github.com/mdsnraetff" target="_blank"><img src="img/github.svg" alt="Github logo, black circle with a cat in the middle"></a>
+    <a href="https://www.instagram.com/madisontaff/?hl=en" target="_blank"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
     </div>
   </footer>
 </html>
