Updating social media links on all pages

--- a/work.html
+++ b/work.html
@@ -14,20 +14,20 @@
     <!-- Add logo here -->
       <img src="img/logo.svg" alt="Main logo for Madison Taff that consists of my initials with a design in the center">
       <nav class="main-navigation page-header_item">
-      <ul role="menubar" class="navigation-list">
-        <li role="presentation">
-         <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
-        </li>
-        <li role="presentation">
-         <a href="about.html" role="menuitem" class="navigation-list__item" target="_blank">About Me</a>
-        </li>
-        <li role="presentation">
-         <a href="contact.html" role="menuitem" class="navigation-list__item" target="_blank">Contact</a>
-        </li>
-        <li role="presentation">
-          <a href="work.html" role="menuitem" class="navigation-list__item" target="_blank">Work</a>
-        </li>
-  </ul>
+        <ul role="menubar" class="navigation-list">
+          <li role="presentation">
+           <a href="index.html" role="menuitem" class="navigation-list__item navigation-list__item--active">Home</a>
+          </li>
+          <li role="presentation">
+           <a href="about.html" role="menuitem" class="navigation-list__item">About Me</a>
+          </li>
+          <li role="presentation">
+           <a href="contact.html" role="menuitem" class="navigation-list__item">Contact</a>
+          </li>
+          <li role="presentation">
+            <a href="work.html" role="menuitem" class="navigation-list__item">Work</a>
+          </li>
+    </ul>
   </nav>
 </header>
 <!--Main Content -->
@@ -68,9 +68,9 @@
 <footer class="page-footer">
   <p>Find me on</p> <!-- outisde website logos -->
   <div class="social-media">
-  <img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle">
-  <img src="img/github.svg" alt="Github logo, black circle with a cat in the middle">
-  <img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle">
+  <a href="https://twitter.com/mdsnraetff" target="_blank"><img src="img/104459_twitter_icon.svg" alt="Twitter logo, black circle with a bird in the middle"></a>
+  <a href="https://github.com/mdsnraetff" target="_blank"><img src="img/github.svg" alt="Github logo, black circle with a cat in the middle"></a>
+  <a href="https://www.instagram.com/madisontaff/?hl=en" target="_blank"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
   </div>
 </footer>
 </body>
