Update about page words and styling

--- a/about.html
+++ b/about.html
@@ -34,13 +34,22 @@
   <h1 > About </h1>
   <p> A little bit about me: </p>
   <div class="about-text">
-      <p>I was born and raised in El Paso, TX. I moved around a lot in my early twenties, and eventually ended up in NYC!  </p>
-      <p>My career for the past seven years has been in opticianry, and I have been the Optician Manager of several different stores and teams.</p>
-      <p>Despite opticianry being a career that is ever evolving and changing, I wasn't feeling challenged enough, which is why I decided to pursue the study of Web Development.</p>
-      <p> I am hoping to take my team building, management, and technical skills, and break into the Tech industry within the next year. </p>
-      <p>  Please take a look at my CV, downloadable at the link below.</p>
+      <p class="about_me_words"> Hi! My name is Madison. I am 27 years old, and I was born and raised in El Paso, Texas.</br>
+      Being rased in such a vibrant culture, I have always had a deep love of art.</br>
+      While in high school, I competed in music competitions across the state, and was part of the team that created our school magazine</br>
+      and newspaper publications. I was also in the El Paso Youth Symphany Orchestra for a few years!</p>
+      <p class="about_me_words">Just a month after graduating high school, I moved to Dallas, Texas to begin my Bachelor's in Fine Arts.<br>
+      I attended college for three years and worked doing portrait photography on the side,</br>
+      but due to unforseen cirumstances, I had to drop out and start working a full-time job.</br>
+      Eventually, I found myself in Denver, Colorado working for an optical company, </br>
+      and shortly after, becoming a Certified Optican and Manager of several different locations.</br></p>
+      <p class="about_me_words">I have stuck with the optical carreer for the past seven years, until moving to NYC,</br>
+         where I have decided to make a carreer change into Web Development.</br>
+      I believe the combination of technical skills I have aquired as an optician,<br>
+      and my history in the arts, will make this a very rewarding career path for me.</br>
+      <p class="about_me_words">If you'd like to know more about my work history, my resume is viewable below. </p>
     </div>
-    <a href="#" class="button" download>Download my CV</a>
+    <a href="file:///Users/madisontaff/Desktop/CF%20Projects/HTML%20Tasks/Portfolio-Website/img/Screen%20Shot%202022-02-23%20at%2012.22.16%20PM.png" class="button" target="_blank">View My Resume</a>
     <?xml version="1.0" encoding="UTF-8" standalone="no"?>
     <svg
        xmlns:dc="http://purl.org/dc/elements/1.1/"
