Error fixes from validation

--- a/about.html
+++ b/about.html
@@ -33,40 +33,40 @@
     <body class="about-page">
   <h1 > About </h1>
   <p> A little bit about me: </p>
-  <div class="about-text">
-      <p class="about_me_words"> Hi! My name is Madison. I am 27 years old, and I was born and raised in El Paso, Texas.</br>
-      Being rased in such a vibrant culture, I have always had a deep love of art.</br>
-      While in high school, I competed in music competitions across the state, and was part of the team that created our school magazine</br>
-      and newspaper publications. I was also in the El Paso Youth Symphany Orchestra for a few years!</p>
-      <p class="about_me_words">Just a month after graduating high school, I moved to Dallas, Texas to begin my Bachelor's in Fine Arts.<br>
-      I attended college for three years and worked doing portrait photography on the side,</br>
-      but due to unforseen cirumstances, I had to drop out and start working a full-time job.</br>
-      Eventually, I found myself in Denver, Colorado working for an optical company, </br>
-      and shortly after, becoming a Certified Optican and Manager of several different locations.</br></p>
-      <p class="about_me_words">I have stuck with the optical carreer for the past seven years, until moving to NYC,</br>
-         where I have decided to make a carreer change into Web Development.</br>
+  <div>
+      <p class="about_me_words"> Hi! My name is Madison. I am 27 years old, and I was born and raised in El Paso, Texas.<br>
+      Being rased in such a vibrant culture, I have always had a deep love of art.<br>
+      While in high school, I competed in music competitions across the state, and was part of the team that created our school magazine<br>
+      and newspaper publications. I was also in the El Paso Youth Symphany Orchestra for a few years!<br>
+      Just a month after graduating high school, I moved to Dallas, Texas to begin my Bachelor's in Fine Arts.<br>
+      I attended college for three years and worked doing portrait photography on the side,<br>
+      but due to unforseen cirumstances, I had to drop out and start working a full-time job.<br>
+      Eventually, I found myself in Denver, Colorado working for an optical company, <br>
+      and shortly after, becoming a Certified Optican and Manager of several different locations.<br></p>
+      <p class="about_me_words">I have stuck with the optical carreer for the past seven years, until moving to NYC,<br>
+         where I have decided to make a carreer change into Web Development.<br>
       I believe the combination of technical skills I have aquired as an optician,<br>
-      and my history in the arts, will make this a very rewarding career path for me.</br>
+      and my history in the arts, will make this a very rewarding career path for me.<br></p>
       <p class="about_me_words">If you'd like to know more about my work history, my resume is viewable below. </p>
     </div>
     <a href="file:///Users/madisontaff/Desktop/CF%20Projects/HTML%20Tasks/Portfolio-Website/img/Screen%20Shot%202022-02-23%20at%2012.22.16%20PM.png" class="button" target="_blank">View My Resume</a>
-    <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+    <xml version="1.0" encoding="UTF-8" standalone="no"></xml>
     <svg
        xmlns:dc="http://purl.org/dc/elements/1.1/"
        xmlns:cc="http://creativecommons.org/ns#"
        xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
        xmlns:svg="http://www.w3.org/2000/svg"
        xmlns="http://www.w3.org/2000/svg"
-       viewBox="0 0 3002.8933 2666.6667"
+       viewbox="0 0 3002.8933 2666.6667"
        class="whole-photo"
        height="500"
        width="500"
        xml:space="preserve"
        id="svg2"
        version="1.1"><metadata
-         id="metadata8"><rdf:RDF><cc:Work
+         id="metadata8"><rdf:rdf><cc:work
              rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-               rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:Work></rdf:RDF></metadata><defs
+               rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:work></rdf:rdf></metadata><defs
          id="defs6" /><g
          transform="matrix(1.3333333,0,0,-1.3333333,0,2666.6667)"
          id="g10"><g
