--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -11,7 +12,6 @@
   </head>
 <body>
   <header class="page-header">
-
       <!-- Add logo here -->
         <img src="img/logo.svg" alt="Main logo for Madison Taff that consists of my initials with a design in the center">
         <nav class="main-navigation page-header_item">
@@ -43,7 +43,8 @@
     <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Message me on Linkedin</a>
   </div>
 
-    <form action="" method="post" id="contact-form" class="form-one">
+
+    <form action="button" method="post" id="contact-form" class="form-one">
       <label class="standard-label" for="contact-email">E-mail: </label>
       <input type="email" id="contact-email" required>
 
