--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
+  
 <body>
   <header class="page-header">
       <!-- Add logo here -->
@@ -31,15 +32,14 @@
     </ul>
     </nav>
   </header>
-</body>
   <div class="contact-one">
   <h3>Madison Taff</h3>
     Located in: <br>
     New York City, New York<br>
     Phone Number:
-    <a href="tel:9153198257" for="my-phone-number">(915)319-8257</a><br>
+    <a href="tel:9153198257">(915)319-8257</a><br>
     Email me
-    <a href="mailto:mdsnraetff@gmail.com" for="my personal email">here.</a><br>
+    <a href="mailto:mdsnraetff@gmail.com">here.</a><br>
     <a href="http://www.linkedin.com/in/madison-taff-404629219" target="_blank">Message me on Linkedin</a>
   </div>
 
@@ -66,4 +66,5 @@
     <a href="https://www.instagram.com/madisontaff/?hl=en" target="_blank"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
     </div>
   </footer>
+</body>
 </html>
