--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
       <link rel="stylesheet" type="text/css" href="css/style.production.css">
   </head>
+    <body class="about-page">
     <header class="page-header">
 
         <!-- Add logo here -->
@@ -30,7 +31,7 @@
         </ul>
       </nav>
     </header>
-    <body class="about-page">
+
   <h1 > About </h1>
   <p> A little bit about me: </p>
   <div>
@@ -50,13 +51,8 @@
       <p class="about_me_words">If you'd like to know more about my work history, my resume is viewable below. </p>
     </div>
     <a href="file:///Users/madisontaff/Desktop/CF%20Projects/HTML%20Tasks/Portfolio-Website/img/Screen%20Shot%202022-02-23%20at%2012.22.16%20PM.png" class="button" target="_blank">View My Resume</a>
-    <xml version="1.0" encoding="UTF-8" standalone="no"></xml>
+
     <svg
-       xmlns:dc="http://purl.org/dc/elements/1.1/"
-       xmlns:cc="http://creativecommons.org/ns#"
-       xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-       xmlns:svg="http://www.w3.org/2000/svg"
-       xmlns="http://www.w3.org/2000/svg"
        viewbox="0 0 3002.8933 2666.6667"
        class="whole-photo"
        height="500"
@@ -64,9 +60,7 @@
        xml:space="preserve"
        id="svg2"
        version="1.1"><metadata
-         id="metadata8"><rdf:rdf><cc:work
-             rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-               rdf:resource="http://purl.org/dc/dcmitype/StillImage" /></cc:work></rdf:rdf></metadata><defs
+         id="metadata8"></metadata><defs
          id="defs6" /><g
          transform="matrix(1.3333333,0,0,-1.3333333,0,2666.6667)"
          id="g10"><g
@@ -6391,7 +6385,6 @@
                d="m 16233.7,13543.6 c 38.2,0 66.3,-31.5 66.3,-66.3 0,-38.2 -31.5,-63 -66.3,-63 -38.1,0 -64.7,31.5 -64.7,64.7 0,9.9 3.3,21.5 9.9,33.1 15,21.6 33.2,33.2 54.8,31.5 z m -31.5,194.1 c 38.1,0 66.3,-31.5 66.3,-64.7 0,-38.1 -31.5,-66.3 -63,-66.3 -38.2,0 -66.4,33.1 -66.4,66.3 0,10 3.3,21.6 10,33.2 11.6,21.6 29.8,31.5 53.1,31.5 z m -66.4,-452.8 c 0,33.2 28.2,64.7 66.4,64.7 33.2,0 64.7,-24.9 64.7,-64.7 0,-38.2 -29.9,-64.7 -68,-64.7 -31.6,0 -56.5,19.9 -61.4,53.1 -1.7,1.6 -1.7,6.6 -1.7,11.6 z m -11.6,615.4 c 38.2,0 64.7,-29.9 64.7,-61.4 0,-38.2 -31.5,-68 -64.7,-68 -38.1,0 -64.7,31.5 -64.7,63 0,11.6 3.3,23.2 10,34.8 11.6,21.6 29.8,31.6 54.7,31.6 z m -82.9,-789.6 c 0,34.9 29.9,66.4 64.7,66.4 38.1,0 66.3,-28.2 66.3,-66.4 0,-34.8 -24.8,-63 -66.3,-63 -31.5,0 -58.1,19.9 -63,51.4 -1.7,1.7 -1.7,6.7 -1.7,11.6 z m -61.4,920.6 c 38.1,0 64.7,-31.5 64.7,-63 0,-38.2 -33.2,-66.4 -66.4,-66.4 -38.1,0 -64.6,31.5 -64.6,63 0,11.6 3.3,23.3 9.9,34.9 11.6,21.5 31.6,31.5 56.4,31.5 z m -68,-1045 c 0,34.9 29.8,63.1 64.7,63.1 34.8,0 64.7,-28.2 64.7,-66.4 0,-33.1 -24.9,-63 -64.7,-63 -31.5,0 -58,19.9 -63,51.4 -1.7,3.3 -1.7,8.3 -1.7,14.9 z m -180.8,-76.3 c 0,34.9 26.6,64.7 64.7,64.7 38.2,0 64.7,-28.2 64.7,-68 0,-31.5 -26.5,-59.7 -64.7,-59.7 -31.5,0 -58.1,19.9 -63,51.4 -1.7,1.7 -1.7,6.7 -1.7,11.6 z m 0,1127.9 c 0,33.2 26.6,64.7 64.7,64.7 38.2,0 64.7,-28.2 64.7,-66.3 0,-38.2 -26.5,-63.1 -64.7,-63.1 -31.5,0 -58.1,21.6 -63,53.1 -1.7,1.7 -1.7,6.6 -1.7,11.6 z m -74.6,-1136.1 c 0,-31.6 -26.6,-64.7 -64.7,-64.7 -31.5,0 -64.7,24.8 -64.7,63 0,34.8 26.5,66.3 64.7,66.3 26.5,0 51.4,-16.5 59.7,-41.4 3.3,-8.3 5,-16.6 5,-23.2 z m -64.7,1086.4 c -39.8,0 -64.7,31.5 -64.7,64.6 0,38.2 31.6,63.1 63,63.1 38.2,0 66.4,-29.9 66.4,-63.1 0,-8.2 -1.7,-16.5 -5,-23.2 -11.6,-26.5 -34.8,-41.4 -59.7,-41.4 z m -192.4,-1111.3 c -38.1,0 -64.7,29.8 -64.7,64.7 0,39.8 33.2,64.6 64.7,64.6 38.1,0 64.7,-31.5 64.7,-66.3 0,-5 -1.7,-13.3 -3.3,-21.6 -11.6,-26.5 -34.9,-41.4 -61.4,-41.4 z m 64.7,1136.1 c 0,-31.5 -24.9,-64.6 -63,-64.6 -31.5,0 -66.4,23.2 -66.4,61.3 0,33.2 24.9,68 63.1,68 28.1,0 51.4,-14.9 63,-41.4 1.6,-8.3 3.3,-15 3.3,-23.3 z m -230.6,-1033.3 c -38.1,0 -63,34.8 -63,66.4 0,38.1 31.5,63 63,63 38.2,0 66.4,-29.9 66.4,-64.7 0,-8.3 -1.7,-16.6 -5,-23.2 -11.6,-24.9 -36.5,-41.5 -61.4,-41.5 z m 66.4,930.5 c 0,-38.1 -26.6,-64.7 -64.7,-64.7 -31.5,0 -64.7,23.2 -64.7,63 0,31.6 26.5,64.7 64.7,64.7 24.9,0 48.1,-14.9 59.7,-39.8 3.3,-8.3 5,-16.6 5,-23.2 z m -172.5,-782.9 c -38.1,0 -64.7,29.9 -64.7,64.7 0,38.2 29.9,64.7 63,64.7 38.2,0 66.3,-31.5 66.3,-64.7 0,-8.3 -1.6,-14.9 -4.9,-23.2 -8.3,-24.9 -33.2,-41.5 -59.7,-41.5 z m 64.6,633.6 c 0,-31.5 -26.4,-64.7 -64.6,-64.7 -33.2,0 -64.7,28.2 -64.7,66.4 0,33.2 28.2,63 66.4,63 24.8,0 49.7,-14.9 58,-39.8 3.3,-8.3 4.9,-16.6 4.9,-24.9 z m -127.7,-447.8 c -39.8,0 -64.7,34.8 -64.7,66.3 0,38.2 33.2,63.1 64.7,63.1 38.2,0 64.8,-31.5 64.8,-63.1 0,-8.3 -1.7,-16.5 -5,-24.8 -11.7,-24.9 -34.8,-41.5 -59.8,-41.5 z m 64.8,262.1 c 0,-34.9 -28.3,-64.7 -66.4,-64.7 -31.5,0 -63.1,24.9 -63.1,63 0,34.8 26.6,66.3 64.7,66.3 26.6,0 51.4,-16.5 59.8,-41.4 3.3,-8.3 5,-16.6 5,-23.2" /></g></g></g></svg>
 
     <script src="js/tota11y.min.js"></script>
-  </body>
   <footer class="page-footer">
     <p>Find me on</p> <!-- outisde website logos -->
     <div class="social-media">
@@ -6400,4 +6393,5 @@
     <a href="https://www.instagram.com/madisontaff/?hl=en" target="_blank"><img src="img/intstagram.svg" alt="Instagram logo, black cicle with a camera in the middle"></a>
     </div>
   </footer>
+</body>
 </html>
